--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -118,7 +118,7 @@
 
 
                 <label class="passive-button file-input">
-                    <input  id="content-file" accept="*" type="file"  name="Asset_File"  class="clearablefileinput "  onchange="handleImageUpload(this)" />
+                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleImageUpload(this)" />
                     Upload file
                 </label>
                     <p id="content-error" class="error"></p>
