--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,7 +5,7 @@
 <h1 class="text-4xl font-bold text-black text-center mb-3">Sign Up</h1>
 <form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
-    {{ form|crispy }}
+    {{ form }}
     <button class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6" type="submit">Sign Up</button>
     <p class="text-gray-500 text-center"> Already have an account?  <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'login' %}">Login</a></p>
 </form>
