--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -2,34 +2,25 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
-
 <head>
     <title>AR.js Studio</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="https://softylus.com/studio-master/style.css" />
-
     <!-- import the leaflet css and script -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" crossorigin=""
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" crossorigin=""
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="></script>
-
-
     <!-- import studio-backend api -->
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/dist/arjs-studio-backend.min.js"></script>
-
     <!-- import aframe to support model preview -->
     <script src="https://aframe.io/releases/1.0.4/aframe.js"></script>
     <script src="https://cdn.statically.io/gh/donmccurdy/aframe-extras/fe293f78/dist/aframe-extras.loaders.js"></script>
-
     <!-- import JsZip -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.3.0/jszip.min.js"></script>
-
     <!-- import web components -->
     <script src="https://softylus.com/studio-master/components/back-anchor/back-anchor.js"></script>
     <script src="https://softylus.com/studio-master/components/file-holder/file-holder.js"></script>
@@ -40,19 +31,15 @@
     <script src="https://softylus.com/studio-master/components/footer/footer.js"></script>
     <script src="https://softylus.com/studio-master/components/model-controller/model-controller.js"></script>
     <script src="https://softylus.com/studio-master/components/feedback/stickybutton.js"></script>
-
     <!-- import utils -->
     <script src="https://softylus.com/studio-master/utils/fileHelper.js"></script>
     <script src="https://softylus.com/studio-master/utils/fileTemplate.js"></script>
     <script src="https://softylus.com/studio-master/utils/fileHandler.js"></script>
     <script src="https://softylus.com/studio-master/pages/location/location.js" defer></script>
 </head>
-
 <body>
-
-
     <div class="pages-content">
-<!--        <back-anchor assetsUrl="https://softylus.com/studio-master/assets"></back-anchor>-->
+        <back-anchor assetsUrl="https://softylus.com/studio-master/assets"></back-anchor>
         <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="title">Location-based</p>
@@ -65,8 +52,6 @@
                 </p>
             </div>
         </div>
-
-
      <form  method="POST" enctype="multipart/form-data">
          {% csrf_token %}
         <div class="pages-content-container">
@@ -94,12 +79,9 @@
                 </div>
             </div>
         </div>
-
-
         <div class="pages-content-container">
             <map-pick-location></map-pick-location>
         </div>
-
         <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="lead">2. Choose the content </p>
@@ -114,55 +96,36 @@
                     <li>Image (.jpg, .png, .gif; max size 15MB)</li>
                     <li>Video (.mp4; max size 25MB)</li>
                 </ul>
-
-
-<!--<div id="div_id_Asset_File" >-->
-<!--                <label for="content-file" class="passive-button file-input">-->
-<!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />-->
-<!--                    Upload file-->
-<!--                </label>-->
-<!--                    <p id="content-error" class="error"></p>-->
-<!--</div>-->
-
-            <div id="div_id_Asset_File" class="mb-3">
+                <label class="passive-button file-input">
+                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleImageUpload(this)" />
+                    Upload file
+                </label>
+                    <p id="content-error" class="error"></p>
+            </div>
+            <div id="content-preview" target="content-file">
+            </div>
+        </div>
+  <div class="creationForm grid grid-cols-2 gap-4">
+ <div id="div_id_Asset_File" class="mb-3">
     <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
             Asset file
          </label>
-          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput " onchange="handleContentUpload(this)" >
+<!--          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput"  >-->
            </div>
-            <div id="content-preview" target="content-file">
-            </div>
-</div>
-        </div>
-<p class="lead">2. Choose the Date </p>
-  <div class="creationForm grid grid-cols-2 gap-4">
-
-
-
-
-
-
-
-
-
+           </div>
          <div id="div_id_Expiry_date" class="mb-3">
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
             Expiry date
         </label>
-        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">
-
+        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">
              </div>
               <div id="div_id_Expiry_time" class="mb-3">
                    <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">
             Expiry time
          </label>
-          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
-
+          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
             </div>
-</div>
-
     <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>
-
      </form>
 <!--        <form method="post" enctype="multipart/form-data">-->
 <!--            {% csrf_token %}-->
@@ -173,7 +136,4 @@
 <page-footer style="display:none;"></page-footer>
     <feedback-button></feedback-button>
 </body>
-
-
-
 {% endblock content %}
