--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -118,7 +118,7 @@
 
 
                 <label class="passive-button file-input">
-                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleImageUpload(this)" />
+<!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "   />-->
                     Upload file
                 </label>
                     <p id="content-error" class="error"></p>
@@ -137,7 +137,7 @@
     <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
             Asset file
          </label>
-<!--          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput"  >-->
+          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput" onchange="handleImageUpload(this)"  >
            </div>
 
 
