--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -67,108 +67,108 @@
         </div>
 
 
-<!--     <form  method="POST" enctype="multipart/form-data">-->
-<!--         {% csrf_token %}-->
-<!--        <div class="pages-content-container">-->
-<!--            <div class="pages-content-element">-->
-<!--                <p class="lead">1. Pick the location</p>-->
-<!--                <p class="paragraph">-->
-<!--                    Click to drop a pin on the map or enter exact GPS coordinates. You may enter up to 10 locations.-->
-<!--                    You can retrieve latitude and longitude from an address using <a target="_blannk" href="https://www.latlong.net/" class="link">this tool</a>.-->
-<!--                </p>-->
-<!--                <div class="coordinates-input-wrapper creationForm">-->
-<!--                    <div class="coordinates-input-container">-->
-<!--                        <div id="div_id_Longitude" class="mb-3">-->
-<!--                            <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--                            Longitude-->
-<!--                        </label>-->
-<!--                        <input  name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">-->
-<!--                        </div>-->
-<!--                            <div id="div_id_Latitude" class="mb-3">-->
-<!--                            <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--                            Latitude-->
-<!--                        </label>-->
-<!--                        <input  name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">-->
-<!--                        </div>-->
-<!--                   </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+     <form  method="POST" enctype="multipart/form-data">
+         {% csrf_token %}
+        <div class="pages-content-container">
+            <div class="pages-content-element">
+                <p class="lead">1. Pick the location</p>
+                <p class="paragraph">
+                    Click to drop a pin on the map or enter exact GPS coordinates. You may enter up to 10 locations.
+                    You can retrieve latitude and longitude from an address using <a target="_blannk" href="https://www.latlong.net/" class="link">this tool</a>.
+                </p>
+                <div class="coordinates-input-wrapper creationForm">
+                    <div class="coordinates-input-container">
+                        <div id="div_id_Longitude" class="mb-3">
+                            <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">
+                            Longitude
+                        </label>
+                        <input  name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">
+                        </div>
+                            <div id="div_id_Latitude" class="mb-3">
+                            <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">
+                            Latitude
+                        </label>
+                        <input  name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
 
 
-<!--        <div class="pages-content-container">-->
-<!--            <map-pick-location></map-pick-location>-->
-<!--        </div>-->
+        <div class="pages-content-container">
+            <map-pick-location></map-pick-location>
+        </div>
 
-<!--        <div class="pages-content-container">-->
-<!--            <div class="pages-content-element">-->
-<!--                <p class="lead">2. Choose the content </p>-->
-<!--                <p class="paragraph">-->
-<!--                <p>Select the type of content you would like to link to your marker and then upload the file from your-->
-<!--                    computer.</p>-->
-<!--                <p class="bold">-->
-<!--                    Please check the file name and remove whitepaces.-->
-<!--                </p>-->
-<!--                <ul>-->
-<!--                    <li>3D Object (.gltf, .glb .zip; max size 50MB)</li>-->
-<!--                    <li>Image (.jpg, .png, .gif; max size 15MB)</li>-->
-<!--                    <li>Video (.mp4; max size 25MB)</li>-->
-<!--                </ul>-->
-
-
-
-<!--                <label class="passive-button file-input">-->
-<!--&lt;!&ndash;                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />&ndash;&gt;-->
-<!--                    <input id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>-->
-<!--                    Upload file-->
-<!--                </label>-->
-<!--                    <p id="content-error" class="error"></p>-->
-<!--            </div>-->
-<!--            <div id="content-preview" target="content-file">-->
-<!--            </div>-->
-
-<!--        </div>-->
-
-<!--  <div class="creationForm grid grid-cols-2 gap-4">-->
+        <div class="pages-content-container">
+            <div class="pages-content-element">
+                <p class="lead">2. Choose the content </p>
+                <p class="paragraph">
+                <p>Select the type of content you would like to link to your marker and then upload the file from your
+                    computer.</p>
+                <p class="bold">
+                    Please check the file name and remove whitepaces.
+                </p>
+                <ul>
+                    <li>3D Object (.gltf, .glb .zip; max size 50MB)</li>
+                    <li>Image (.jpg, .png, .gif; max size 15MB)</li>
+                    <li>Video (.mp4; max size 25MB)</li>
+                </ul>
 
 
 
+                <label class="passive-button file-input">
+<!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />-->
+                    <input id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>
+                    Upload file
+                </label>
+                    <p id="content-error" class="error"></p>
+            </div>
+            <div id="content-preview" target="content-file">
+            </div>
 
-<!-- <div id="div_id_Asset_File" class="mb-3">-->
-<!--    <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--            Asset file-->
-<!--         </label>-->
-<!--&lt;!&ndash;          <input type="file"  id="content-file" accept="*"  name="Asset_File" onchange="handleImageUpload(this)"  >&ndash;&gt;-->
-<!--&lt;!&ndash;                  <input id="content-file" accept="*" type="file"  name="Asset_File" hidden onchange="handleContentUpload(this)" />&ndash;&gt;-->
-<!--           </div>-->
+        </div>
 
-
-<!--           </div>-->
-
-<!--         <div id="div_id_Expiry_date" class="mb-3">-->
-<!--              <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--            Expiry date-->
-<!--        </label>-->
-<!--        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">-->
-
-<!--             </div>-->
-<!--              <div id="div_id_Expiry_time" class="mb-3">-->
-<!--                   <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--            Expiry time-->
-<!--         </label>-->
-<!--          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">-->
-
-<!--            </div>-->
+  <div class="creationForm grid grid-cols-2 gap-4">
 
 
-<!--    <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>-->
 
-<!--     </form>-->
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-primary" type='submit'>Submit</button>
-        </form>
+
+ <div id="div_id_Asset_File" class="mb-3">
+    <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
+            Asset file
+         </label>
+<!--          <input type="file"  id="content-file" accept="*"  name="Asset_File" onchange="handleImageUpload(this)"  >-->
+<!--                  <input id="content-file" accept="*" type="file"  name="Asset_File" hidden onchange="handleContentUpload(this)" />-->
+           </div>
+
+
+           </div>
+
+         <div id="div_id_Expiry_date" class="mb-3">
+              <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
+            Expiry date
+        </label>
+        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">
+
+             </div>
+              <div id="div_id_Expiry_time" class="mb-3">
+                   <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">
+            Expiry time
+         </label>
+          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
+
+            </div>
+
+
+    <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>
+
+     </form>
+<!--        <form method="post" enctype="multipart/form-data">-->
+<!--            {% csrf_token %}-->
+<!--            {{ form.as_p }}-->
+<!--            <button class="btn btn-primary" type='submit'>Submit</button>-->
+<!--        </form>-->
     </div>
 <page-footer style="display:none;"></page-footer>
     <feedback-button></feedback-button>
