--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -100,7 +100,7 @@
             <map-pick-location></map-pick-location>
         </div>
 
-        <div class="pages-content-container">
+      <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="lead">2. Choose the content </p>
                 <p class="paragraph">
@@ -112,20 +112,20 @@
                 <ul>
                     <li>3D Object (.gltf, .glb .zip; max size 50MB)</li>
                     <li>Image (.jpg, .png, .gif; max size 15MB)</li>
+                    <!-- Audio need to be fixed -->
+                    <!-- <li>Audio (.mp3; max size 10MB)</li> -->
                     <li>Video (.mp4; max size 25MB)</li>
                 </ul>
                 </p>
-                <label class="passive-button file-input">
-                    <input id="content-file"   class="clearablefileinput " accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
+                <label for="content-file"  class="passive-button file-input">
+                    <input name="Asset_File" id="content-file" accept="*" type="file" hidden onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                 <p id="content-error" class="error"></p>
             </div>
             <div id="content-preview" target="content-file">
             </div>
-       
         </div>
-
   <div class="creationForm grid grid-cols-2 gap-4">
     
 
