--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -14,5 +14,31 @@
         <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Update</button>
 </div>
   </form>
-
+<script src="{% static 'js/intlTelInput.js' %}"></script>
+  <script>
+    var input = document.querySelector("#id_phone_number");
+    window.intlTelInput(input, {
+      // allowDropdown: false,
+      // autoHideDialCode: false,
+      // autoPlaceholder: "off",
+      // dropdownContainer: document.body,
+      // excludeCountries: ["us"],
+      // formatOnDisplay: false,
+      // geoIpLookup: function(callback) {
+      //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+      //     var countryCode = (resp && resp.country) ? resp.country : "";
+      //     callback(countryCode);
+      //   });
+      // },
+      // hiddenInput: "full_number",
+      // initialCountry: "auto",
+      // localizedCountries: { 'de': 'Deutschland' },
+      // nationalMode: false,
+      // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+      // placeholderNumberType: "MOBILE",
+      // preferredCountries: ['cn', 'jp'],
+      // separateDialCode: true,
+      utilsScript: "{% static 'js/utils.js' %}",
+    });
+  </script>
 {% endblock content %}
