--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -24,13 +24,15 @@
                 ></a-asset-item>
 
             </a-assets>
+            {% for location in object.Multi_Locations %}
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="16.551939061849072 16.551939061849072 16.551939061849072"
-                    gps-entity-place="latitude: {{ object.Latitude }}; longitude: {{ object.Longitude }};"
+                    gps-entity-place="latitude: {{ location.0 }}; longitude: {{ location.1 }};"
                 ></a-entity>
+  {% endfor %}
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
