--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -7,12 +7,12 @@
   <meta charset="utf-8">
   <title>{% block title %}AR Project{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<link rel="stylesheet" href="{% static 'css/intlTelInput.css' %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <!-- CSS only -->
 <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">-->
 
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
   <header>
