--- a/templates/nonLogedBase.html
+++ b/templates/nonLogedBase.html
@@ -11,7 +11,8 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <!-- CSS only -->
 <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">-->
-
+<link rel="stylesheet" href="{% static 'css/intlTelInput.css' %}">
+  <link rel="stylesheet" href="{% static 'css/demo.css' %}">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
