--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,8 +28,8 @@
 <!--                </svg>-->
                 <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.48 22.926l-1.193.658c-6.979 3.621-19.082-17.494-12.279-21.484l1.145-.637 3.714 6.467-1.139.632c-2.067 1.245 2.76 9.707 4.879 8.545l1.162-.642 3.711 6.461zm-9.808-22.926l-1.68.975 3.714 6.466 1.681-.975-3.715-6.466zm8.613 14.997l-1.68.975 3.714 6.467 1.681-.975-3.715-6.467z"/></svg>
 
-                {% if user.phone %}
-                 <p class="px-2 text-sm">{{ user.phone }}</p>
+                {% if user.phone_number %}
+                 <p class="px-2 text-sm">{{ user.phone_number }}</p>
                 {% else %}
                 <p class="px-2 text-sm">No Phone</p>
             {% endif %}
