--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,44 @@
 {% extends 'nonLogedBase.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title %}
+{% load static %}
+
 {% block content %}
 <h1 class="text-4xl font-bold text-black text-center mb-3">Sign Up</h1>
 <form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     {{ form|crispy }}
+
+<!--    phone : <input id="phone" name="phone" type="tel">-->
+
     <button class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6" type="submit">Sign Up</button>
     <p class="text-gray-500 text-center"> Already have an account?  <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'login' %}">Login</a></p>
 </form>
+<script src="{% static 'js/intlTelInput.js' %}"></script>
+  <script>
+    var input = document.querySelector("#id_phone_number");
+    window.intlTelInput(input, {
+      // allowDropdown: false,
+      // autoHideDialCode: false,
+      // autoPlaceholder: "off",
+      // dropdownContainer: document.body,
+      // excludeCountries: ["us"],
+      // formatOnDisplay: false,
+      // geoIpLookup: function(callback) {
+      //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+      //     var countryCode = (resp && resp.country) ? resp.country : "";
+      //     callback(countryCode);
+      //   });
+      // },
+      // hiddenInput: "full_number",
+      // initialCountry: "auto",
+      // localizedCountries: { 'de': 'Deutschland' },
+      // nationalMode: false,
+      // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+      // placeholderNumberType: "MOBILE",
+      // preferredCountries: ['cn', 'jp'],
+      // separateDialCode: true,
+      utilsScript: "{% static 'js/utils.js' %}",
+    });
+  </script>
 {% endblock content %}
