--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -17,20 +17,26 @@
             arjs="sourceType: webcam; debugUIEnabled: false;"
         >
             <a-assets>
+            {% for asset in  object.Asset_File %}
+               <a-asset-item
 
-              <a-asset-item
                     id="animated-asset"
-                    src="{{ object.Asset_File.url }}"
+                    src="{{ asset.Asset_File }}"
                 ></a-asset-item>
+            {% endfor %}
+
 
             </a-assets>
+
+            {% for location in object.Multi_Locations   %}
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="16.551939061849072 16.551939061849072 16.551939061849072"
-                    gps-entity-place="latitude: {{ object.Latitude }}; longitude: {{ object.Longitude }};"
+                    gps-entity-place="latitude: {{ location.0 }}; longitude: {{ location.1 }};"
                 ></a-entity>
+            {% endfor %}
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
