--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -78,18 +78,8 @@
                 </p>
                 <div class="coordinates-input-wrapper creationForm">
                     <div class="coordinates-input-container">
-                        <div id="div_id_Longitude" class="mb-3">
-                            <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">
-                            Longitude
-                        </label>
-                        <input  name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">
-                        </div>
-                            <div id="div_id_Latitude" class="mb-3">
-                            <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">
-                            Latitude
-                        </label>
-                        <input  name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">
-                        </div>
+
+
                    </div>
                 </div>
             </div>
@@ -119,14 +109,16 @@
 
                 <label class="passive-button file-input">
 <!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />-->
-                    <input id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>
+                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>
                     Upload file
                 </label>
+                <button type="button" name="add_image" id="add_image" value="Add Image">add asset</button>
                     <p id="content-error" class="error"></p>
             </div>
             <div id="content-preview" target="content-file">
             </div>
-
+        q<div id="images">
+        </div>
         </div>
 
   <div class="creationForm grid grid-cols-2 gap-4">
@@ -170,8 +162,46 @@
 <!--            <button class="btn btn-primary" type='submit'>Submit</button>-->
 <!--        </form>-->
     </div>
+<script>
+
+
+    document.getElementById("add_image").onclick=function (ev) {
+
+        var image=document.getElementById("images");
+
+        var preview=document.createElement("img");
+        preview.style.width="auto";
+        preview.style.height="100px";
+
+
+        var newInput=document.createElement("input");
+        newInput.type="file";
+        newInput.name="file[]";
+
+
+        var br=document.createElement("br");
+        var br1=document.createElement("br");
+
+        newInput.onchange=function (ev1) {
+            if(this.files && this.files[0]){
+                var fileReader=new FileReader();
+
+                fileReader.onload=function (ev2) {
+                    preview.src=ev2.target.result;
+                };
+
+                fileReader.readAsDataURL(this.files[0])
+            }
+        };
+
+        image.appendChild(preview);
+        image.appendChild(newInput);
+        image.appendChild(br);
+        image.appendChild(br1);
+
+    }
+</script>
 <page-footer style="display:none;"></page-footer>
-    <feedback-button></feedback-button>
 </body>
 
 
