--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -117,7 +117,7 @@
             </div>
             <div id="content-preview" target="content-file">
             </div>
-        q<div id="images">
+        <div id="images">
         </div>
         </div>
 
