muliple locations and assets

--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -112,7 +112,9 @@
                     <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>
                     Upload file
                 </label>
-                <button type="button" name="add_image" id="add_image" value="Add Image">add asset</button>
+                <div>
+                    <button type="button" name="add_image" id="add_image" value="Add Image">add asset</button>
+                </div>
                     <p id="content-error" class="error"></p>
             </div>
             <div id="content-preview" target="content-file">
