--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -8,11 +8,11 @@
         <div class="card">
 
           <div class="card-header">
-           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">{{ asset.Longitude }}</a> &middot;<br>
+           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">Preview Asset</a> &middot;<br>
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
-            test
+
           </div>
           <div class="card-footer text-center text-muted">
             <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a>
