--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -8,7 +8,7 @@
         <div class="card">
 
           <div class="card-header">
-           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">Preview Asset</a> &middot;<br>
+           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold underline">Preview Asset</a> &middot;<br>
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
