muliple locations and assets

--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -113,7 +113,7 @@
                     Upload file
                 </label>
                 <div>
-                    <button type="button" name="add_image" id="add_image" value="Add Image">add asset</button>
+                    <button type="button" name="add_image" id="add_image" hidden value="Add Image">add asset</button>
                 </div>
                     <p id="content-error" class="error"></p>
             </div>
