muliple locations and assets

--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -109,7 +109,7 @@
 
                 <label class="passive-button file-input">
 <!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />-->
-                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  onchange="handleImageUpload(this)"/>
+                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  />
                     Upload file
                 </label>
                 <div>
