muliple locations and assets

--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -107,13 +107,13 @@
 
 
 
-                <label class="passive-button file-input">
-<!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />-->
-                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  />
-                    Upload file
-                </label>
+<!--                <label class="passive-button file-input">-->
+<!--&lt;!&ndash;                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  />&ndash;&gt;-->
+<!--&lt;!&ndash;                    Upload file&ndash;&gt;-->
+<!--                </label>-->
                 <div>
-                    <button type="button" name="add_image" id="add_image" hidden value="Add Image">add asset</button>
+                    <button  class="bg-blue-500 py-5 px-8 " type="button" name="add_image" id="add_image" hidden value="Add Image">add asset</button>
                 </div>
                     <p id="content-error" class="error"></p>
             </div>
