--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -113,7 +113,7 @@
 <!--&lt;!&ndash;                    Upload file&ndash;&gt;-->
 <!--                </label>-->
                 <div>
-                    <button  class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="button" name="add_image" id="add_image"  value="Add Image">add asset</button>
+                    <button  class="bg-purple-800 text-white my-5 px-16 py-3 rounded outline-none block" type="button" name="add_image" id="add_image"  value="Add Image">add asset</button>
                 </div>
                     <p id="content-error" class="error"></p>
             </div>
