--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -4,12 +4,11 @@
 
 {% block content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
-  {% for asset in object_list %}
-     {% if user.id  == asset.user.id %}
+    {% for asset in object_list %}
         <div class="card">
 
           <div class="card-header">
-           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold underline"><img src="{{ asset.qr_code }}" /></a> &middot;<br>
+           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold underline"><img src="{{ asset.qr_code.url }}" /></a> &middot;<br>
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
@@ -20,8 +19,7 @@
           </div>
         </div>
 
-    {% endif %}
 
-  {% endfor %}
+    {% endfor %}
 </div>
 {% endblock content %}
