--- a/event/templates/Asset_delete.html
+++ b/event/templates/Asset_delete.html
@@ -1,9 +1,10 @@
 {% extends '_base.html' %}
 
 {% block content %}
-  <h1>Delete</h1>
-  <form action="" method="post">{% csrf_token %}
+  <h1 class="ml-10">Delete</h1>
+  <form class="ml-10" action="" method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ asset.code }}"?</p>
-    <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block mt-6" type="submit">Confirm</button>
+    <button  style="background-color:#00992D" class=" text-white my-5 px-16 py-3 rounded outline-none block" type="button" >Confirm</button>
+
   </form>
 {% endblock content %}
