--- a/event/templates/Asset_edit.html
+++ b/event/templates/Asset_edit.html
@@ -24,24 +24,24 @@
     <!-- import JsZip -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.3.0/jszip.min.js"></script>
     <!-- import web components -->
-    <script src="https://softylus.com/studio-master/components/back-anchor/back-anchor.js"></script>
-    <script src="https://softylus.com/studio-master/components/file-holder/file-holder.js"></script>
-    <script src="https://softylus.com/studio-master/components/file-select/file-select.js"></script>
-    <script src="https://softylus.com/studio-master/components/map/map-elements.js"></script>
-    <script src="https://softylus.com/studio-master/components/map/map-pick-location.js"></script>
-    <script src="https://softylus.com/studio-master/components/header/header.js"></script>
-    <script src="https://softylus.com/studio-master/components/footer/footer.js"></script>
-    <script src="https://softylus.com/studio-master/components/model-controller/model-controller.js"></script>
-    <script src="https://softylus.com/studio-master/components/feedback/stickybutton.js"></script>
+    <script src="{% static 'studio-master/components/back-anchor/back-anchor.js' %}"></script>
+    <script src="{% static 'studio-master/components/file-holder/file-holder.js' %}"></script>
+    <script src="{% static 'studio-master/components/file-select/file-select.js' %}"></script>
+    <script src="{% static 'studio-master/components/map/map-elements.js ' %}"></script>
+    <script src="{% static 'studio-master/components/map/map-pick-location.js ' %}"></script>
+    <script src="{% static 'studio-master/components/header/header.js' %}"></script>
+    <script src="{% static 'studio-master/components/footer/footer.js' %}"></script>
+    <script src="{% static 'studio-master/components/model-controller/model-controller.js' %}"></script>
     <!-- import utils -->
-    <script src="https://softylus.com/studio-master/utils/fileHelper.js"></script>
-    <script src="https://softylus.com/studio-master/utils/fileTemplate.js"></script>
-    <script src="https://softylus.com/studio-master/utils/fileHandler.js"></script>
-    <script src="https://softylus.com/studio-master/pages/location/location.js" defer></script>
+    <script src="{% static 'studio-master/utils/fileHelper.js' %}"></script>
+    <script src="{% static 'studio-master/utils/fileTemplate.js' %}"></script>
+    <script src="{% static 'studio-master/utils/fileHandler.js' %}"></script>
+    <script src="{% static 'studio-master/pages/location/location.js' %}" defer></script>
+    <script src="{% static 'studio-master/pages/location/location.js' %}" defer></script>
 </head>
 <body>
     <div class="pages-content">
-        <back-anchor assetsUrl="https://softylus.com/studio-master/assets"></back-anchor>
+
         <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="title">Location-based</p>
@@ -54,7 +54,7 @@
                 </p>
             </div>
         </div>
-     <form  method="POST" enctype="multipart/form-data">
+    <form  method="POST" enctype="multipart/form-data">
          {% csrf_token %}
         <div class="pages-content-container">
             <div class="pages-content-element">
@@ -65,28 +65,18 @@
                 </p>
                 <div class="coordinates-input-wrapper creationForm">
                     <div class="coordinates-input-container">
-<!--                        <div id="div_id_Longitude" class="mb-3">-->
-<!--                            <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--                            Longitude-->
-<!--                        </label>-->
-<!--                        <input  name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">-->
-<!--                        </div>-->
-                            {{ form.Longitude|as_crispy_field }}
-<!--                            <div id="div_id_Latitude" class="mb-3">-->
-<!--                            <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--                            Latitude-->
-<!--                        </label>-->
-<!--                        <input  name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">-->
-<!--                        </div>-->
-                            {{ form.Latitude|as_crispy_field }}
+
 
                    </div>
                 </div>
             </div>
         </div>
+
+
         <div class="pages-content-container">
             <map-pick-location></map-pick-location>
         </div>
+
         <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="lead">2. Choose the content </p>
@@ -96,53 +86,87 @@
                 <p class="bold">
                     Please check the file name and remove whitepaces.
                 </p>
-                <ul>
+                <ul class="my-5">
                     <li>3D Object (.gltf, .glb .zip; max size 50MB)</li>
                     <li>Image (.jpg, .png, .gif; max size 15MB)</li>
                     <li>Video (.mp4; max size 25MB)</li>
                 </ul>
-                <label class="passive-button file-input">
-                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleImageUpload(this)" />
-                    Upload file
-                </label>
+
+
+
+<!--                <label class="passive-button file-input">-->
+<!--&lt;!&ndash;                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput"   />&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input multiple id="content-file" name="Asset_File"  class="clearablefileinput"  accept="*" type="file" hidden  />&ndash;&gt;-->
+<!--&lt;!&ndash;                    Upload file&ndash;&gt;-->
+<!--                </label>-->
+                <div>
+                     <div id="images">
+                     </div>
+                    <button  style="background-color:#00992D" class=" text-white my-5 px-16 py-3 rounded outline-none block" type="button" name="add_image" id="add_image"  value="Add Image">Add asset</button>
+                </div>
                     <p id="content-error" class="error"></p>
             </div>
             <div id="content-preview" target="content-file">
             </div>
+
         </div>
-  <div class="creationForm grid grid-cols-2 gap-4">
- <div id="div_id_Asset_File" class="mb-3">
-    <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
-            Asset file
-         </label>
-<!--          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput"  >-->
-           </div>
-           </div>
-<!--         <div id="div_id_Expiry_date" class="mb-3">-->
-<!--              <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--            Expiry date-->
-<!--        </label>-->
-<!--        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">-->
-<!--             </div>-->
-         {{ form.Expiry_date|as_crispy_field }}
 
-<!--              <div id="div_id_Expiry_time" class="mb-3">-->
-<!--                   <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">-->
-<!--            Expiry time-->
-<!--         </label>-->
-<!--          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">-->
-<!--            </div>-->
-          {{ form.Expiry_time|as_crispy_field }}
 
-    <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>
+         <div id="div_id_Expiry_date  " class="mb-3 w-1/2 ml-5">
+                {{ form.Expiry_date|as_crispy_field }}
+             </div>
+              <div id="div_id_Expiry_time" class="mb-3 w-1/2 ml-5">
+                 {{ form.Expiry_time|as_crispy_field }}
+            </div>
+
+
+    <button value="submit" style="background-color:#00992D" class=" text-white ml-5 px-16 py-3 my-5 rounded outline-none block " name="Submit">Submit</button>
+
      </form>
-<!--        <form method="post" enctype="multipart/form-data">-->
-<!--            {% csrf_token %}-->
-<!--            {{ form|crispy }}-->
-<!--            <button class="btn btn-primary" type='submit'>Submit</button>-->
-<!--        </form>-->
+<script>
+
+
+    document.getElementById("add_image").onclick=function (ev) {
+
+        var image=document.getElementById("images");
+
+        var preview=document.createElement("img");
+        preview.style.width="auto";
+        preview.style.height="100px";
+
+
+        var newInput=document.createElement("input");
+        newInput.type="file";
+        newInput.name="file[]";
+
+
+        var br=document.createElement("br");
+        var br1=document.createElement("br");
+
+        newInput.onchange=function (ev1) {
+            if(this.files && this.files[0]){
+                var fileReader=new FileReader();
+
+                fileReader.onload=function (ev2) {
+                    preview.src=ev2.target.result;
+                };
+
+                fileReader.readAsDataURL(this.files[0])
+            }
+        };
+
+        image.appendChild(preview);
+        image.appendChild(newInput);
+        image.appendChild(br);
+        image.appendChild(br1);
+
+    }
+</script>
     </div>
 <page-footer style="display:none;"></page-footer>
     <feedback-button></feedback-button>
 </body>
 {% endblock content %}
+
+
+
