--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
-    {% for asset in object_list %}
+    {% for asset in assets %}
         <div class="card">
 
           <div class="card-header " >
