--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -17,14 +17,16 @@
 <body>
   <header>
     <!-- Fixed navbar -->
-    <div class="flex justify-between align-items-center p-6 bg-white border-bottom shadow-sm">
+    <div class="flex justify-between align-items-center  bg-white border-bottom shadow-sm">
          <a href="{% url 'home' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
-                <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
-                <div class="font-bold  flex flex-col justify-center">DazShop</div>
+                <div class=" p-4 mx-3">
+                    <img src="{% static 'images/ar.png' %}" class="w-20" />
+                </div>
+                <div class="font-bold  flex flex-col justify-center"></div>
             </a>
         {% if user.is_authenticated %}
 
-        <div class="flex w-1/6">
+        <div class="flex flex-end p-5">
             <a href="{% url 'profile' %}">
 
 
@@ -34,11 +36,14 @@
                 <img class="w-14 h-14 bg-gray-300 rounded-full mr-3" src="{% static 'images/nopic.jpg' %}">
             {% endif %}
             </a>
-            <div class="flex flex-col justify-center ">
+            <div class="flex  justify-center ">
+                 <div class="flex-col mr-4">
                 <p class="font-semibold text-lg capitalized">{{ user.username }}</p>
-                <p class="text-sm text-gray-300">{{ user.email }}</p>
-                <a class="text-center bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none my-2" href="{% url 'logout' %}">Log Out</a>
-            </div>
+                <p class="text-sm text-gray-500">{{ user.email }}</p>
+                  </div>
+
+                <a style="background-color:#00992D" class="text-center mt-3 text-white px-6 py-0.5 h-8 rounded outline-none my-2" href="{% url 'logout' %}">Log Out</a>
+           </div>
 
 
 
@@ -47,8 +52,8 @@
 
       {% else %}
         <div class="flex flex-row " style="align-items: center;">
-            <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block " href="{% url 'login' %}">Log In</a>
-            <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block" href="{% url 'signup' %}">Sign Up</a>
+            <a style="background-color:#00992D" class=" text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block " href="{% url 'login' %}">Log In</a>
+            <a style="background-color:#00992D" class=" text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block" href="{% url 'signup' %}">Sign Up</a>
         </div>
       {% endif %}
     </div>
@@ -58,13 +63,13 @@
      <nav class="w-1/5 border-r-2 pl-16">
          <ul>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'events' %}">Events</a>  <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'events' %}">Events</a>  <a class="text-sm text-green-400 capitalize hover:text-green-800" href="{% url 'event_new' %}">+New </a>
              </li>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'Assets_list' %}">Assets</a>  <a <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'Assets_list' %}">Assets</a>  <a class="text-sm text-green-400 capitalize hover:text-green-800" href="{% url 'Asset_new' %}">+New </a>
              </li>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'location_list' %}">Locations</a>  <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'location_list' %}">Locations</a>  <a class="text-sm text-green-400 capitalize hover:text-green-800" href="{% url 'location_new' %}">+New </a>
              </li>
          </ul>
       </nav>
