--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -7,7 +7,7 @@
       <div class="profileEditForm grid grid-cols-2 gap-4">
           {{ form|crispy }}
           <div class="mb-3">
-              <a class="text-purple-400 capitalize hover:text-purple-800"  href="{% url 'password_change' %}">change my password</a>
+              <a class="text-green-400 capitalize hover:text-purple-800"  href="{% url 'password_change' %}">change my password</a>
           </div>
       </div>
 <div class="p-4 flex justify-end">
