--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,10 +6,10 @@
 <form method="post">
     {% csrf_token %}
        {{ form|crispy }}
-    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'password_reset' %}">
+    <a class="text-gray-600 capitalize hover:text-gray-800" href="{% url 'password_reset' %}">
         forget your password?
     </a>
-    <button type="submit" class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6">Log In</button>
-        <p class="text-gray-500 text-center"> You don't have an account?  <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'login' %}">Sign Up</a></p>
+    <button type="submit" style="background-color:#00992D" class="text-white px-8 py-3 rounded outline-none block mx-auto my-6">Log In</button>
+        <p class="text-gray-400 text-center"> You don't have an account?  <a class="text-gray-600 capitalize hover:text-gray-800" href="{% url 'signup' %}">Sign Up</a></p>
 </form>
 {% endblock content %}
